[package]
name = "ed25519-dalek-js"
version = "0.0.3"
authors = ["Johan SteÌn <johan@futuretense.io>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "ed25519_dalek_js"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
sha2 = "0.8.0"
serde = { version = "1.0", default-features = false, features = ["alloc"] }
bincode = "1"

[dependencies.ed25519-dalek]
version = "0.9.1"
default-features = false
features = ["avx2_backend", "serde"]

[dependencies.curve25519-dalek]
version = "1"
default-features = false
features = ["avx2_backend", "serde"]
